# ChillPatcher

./: .gitignore  .gitmodules  ChillPatcher.csproj  ChillPatcher.sln  CoreDependencyLoader.cs  MyPluginInfo.cs  Plugin.cs  PluginConfig.cs  README.md  build.bat  build_all.bat  build_release.bat  deploy.bat  package_release.bat  test.py
ChillPatcher.Module.LocalFolder/: ChillPatcher.Module.LocalFolder.csproj  LocalFolderModule.cs  ModuleInfo.cs
ChillPatcher.Module.LocalFolder/Models/: JsonModels.cs
ChillPatcher.Module.LocalFolder/Services/: LocalDatabase.cs
ChillPatcher.Module.Netease/: ChillPatcher.Module.Netease.csproj  NeteaseBridge.cs  NeteaseFavoriteManager.cs  NeteaseModule.cs  NeteasePcmStreamReader.cs  NeteaseSongRegistry.cs  QRLoginManager.cs
ChillPatcher.SDK/: ChillPatcher.SDK.csproj  SDKInfo.cs
ChillPatcher.SDK/Attributes/: MusicModuleAttribute.cs
ChillPatcher.SDK/Events/: ModuleEvents.cs
ChillPatcher.SDK/Interfaces/: ICoreServices.cs  IDependencyLoader.cs  IEventBus.cs  IModuleConfigManager.cs  IModuleContext.cs  IMusicModule.cs  IProviders.cs  IRegistry.cs
ChillPatcher.SDK/Models/: AlbumInfo.cs  MusicInfo.cs  TagInfo.cs
ModuleSystem/: EventBus.cs  ModuleContext.cs  ModuleLoader.cs
ModuleSystem/Registry/: AlbumRegistry.cs  MusicRegistry.cs  TagRegistry.cs
ModuleSystem/Services/: CoreAudioLoader.cs  CoverService.cs  DefaultCoverProvider.cs  DependencyLoader.cs
Native/: FlacDecoder.cs
NativePlugins/FlacDecoder/: CMakeLists.txt  README.md  build.bat
NativePlugins/FlacDecoder/include/: flac_decoder.h
NativePlugins/FlacDecoder/src/: flac_decoder.cpp
Patches/: KeyboardHookPatch.cs  SaveData_CleanInvalid_Patch.cs  UIRearrangePatch.cs
WeatherSync/: WeatherSyncConfig.cs  WeatherSyncManager.cs  WeatherSyncPatches.cs
netease_bridge/: main.go
(+61 files in other folders)
